# Course_work_4

./: .gitignore  README.md  config.py  info_12-03-2024.json  main.py  pyproject.toml
data/: 1  2  Vacancy_HH.json  Vacancy_HH_1.json  Vavancy_12-03-2024 16-34-22.json  Vavancy_12-03-2024 16-39-51.json  Vavancy_12-03-2024 16-40-31.json  Vavancy_12-03-2024 16-52-29.json  Vavancy_12-03-2024 16-54-22.json  Vavancy_12-03-2024 16-57-05.json  Vavancy_13-03-2024 07-01-46.json
src/: Abstract_classes.py  ConnectAPI.py  Vacancy.py  __init__.py  api.py  classes.py  func.py  saver.py  utils.py  vacancy.py
tests/: tests_api.py
